Demo Activity via Android Studio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WithGaNaDa"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
         tools:targetApi="31">
         <activity
             android:name=".CheckQuestion"
@@ -20,10 +21,11 @@
             android:name=".Question"
             android:exported="false" />
         <activity
-            android:name=".Splash"
+
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
