--- a/WithGaNaDa/app/build.gradle
+++ b/WithGaNaDa/app/build.gradle
@@ -36,4 +36,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
+    // http 통신을 위한 레트로핏 라이브러리 :: https://github.com/square/retrofit
+    // LICENSE : https://github.com/square/retrofit/blob/master/LICENSE.txt
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'commons-io:commons-io:2.4'
+
+
 }
